# chesstalk

./: AUTHORS  ChangeLog  Makefile.am  README  README.alternate-voices  TODO  configure.ac
doc/: specify-ambiguity.txt
module/: Makefile.am
module/ajaxtime/: Makefile.am  ajaxtime.css  ajaxtime.html  ajaxtime.js  module_ajaxtime.c  notes.txt
src/: Makefile.am  chesstalk.c  chesstalk_module.h  move_spec.c  move_spec.h  output_module.h  piece_chars.c  piece_chars.h  piece_name.c  piece_name.h  run-ajaxtime-module.sh  start-festival_server.sh  validate_input_move.c  validate_input_move.h
tests/: Makefile.am  test-piece_name.c  test-validate_input_move.c
