
INCLUDES = 

LIBS = 

AM_CFLAGS = -Wall

bin_PROGRAMS = chesstalk

EXTRA_DIST = ./run-festival-server.h ./run-ajaxtime-module.sh

chesstalk_LDFLAGS = 
chesstalk_LDADD = -ldl
chesstalk_CFLAGS =  $(AM_CFLAGS)
chesstalk_SOURCES = chesstalk.c move_spec.c move_spec.h validate_input_move.c validate_input_move.h piece_name.c piece_name.h piece_chars.h piece_chars.c

