
lib_LTLIBRARIES = libchesstalk_ajaxtime.la

AM_CFLAGS = 

include_HEADERS = 
libchesstalk_ajaxtime_la_DEFINES = 
libchesstalk_ajaxtime_la_SOURCES = module_ajaxtime.c 
libchesstalk_ajaxtime_la_CFLAGS = $(AM_CFLAGS) -I$(top_srcdir)/src
libchesstalk_ajaxtime_la_LDFLAGS = -version-info 0:98:0 
libchesstalk_ajaxtime_la_LIBADD = -lpthread # $(top_srcdir)/module/ajaxtime/libnotes.la

